fix(style): fix authorize popup button overlap in Firefox
Add display: flex to .authorize inside .auth-btn-wrapper to override
the display: inline from the global .btn.authorize rule. Firefox does
not automatically blockify inline elements inside flex containers,
causing buttons to overlap.

Fixes #6649

--- a/src/style/_authorize.scss
+++ b/src/style/_authorize.scss
@@ -11,6 +11,10 @@
   .btn-done {
     margin-right: 1em;
   }
+
+  .authorize {
+    display: flex;
+  }
 }
 
 .auth-wrapper {
